--- a/my-angular-app/tsconfig.json
+++ b/my-angular-app/tsconfig.json
@@ -17,7 +17,21 @@
     "lib": [
       "es2018",
       "dom"
-    ]
+    ],
+    "paths": {
+      "my-lib": [
+        "dist/my-lib"
+      ],
+      "my-lib/*": [
+        "dist/my-lib/*"
+      ],
+      "my-angular-lib": [
+        "dist/my-angular-lib"
+      ],
+      "my-angular-lib/*": [
+        "dist/my-angular-lib/*"
+      ]
+    }
   },
   "angularCompilerOptions": {
     "fullTemplateTypeCheck": true,
