--- a/my-angular-app/angular.json
+++ b/my-angular-app/angular.json
@@ -23,6 +23,7 @@
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.app.json",
             "aot": false,
+            "outputHashing": "none",
             "assets": [
               "src/favicon.ico",
               "src/assets"
