Including javascript needed to load angular element in angular.jsom

--- a/my-angular-app/angular.json
+++ b/my-angular-app/angular.json
@@ -33,7 +33,8 @@
             "scripts": [
               {
                 "input": "node_modules/document-register-element/build/document-register-element.js"
-              }
+              },
+              "element/element.js"
             ]
           },
           "configurations": {
